--- a/aula12ex/ex015/estilo.css
+++ b/aula12ex/ex015/estilo.css
@@ -18,6 +18,10 @@ section{
     width: 500px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.164);
 }
+div{
+    text-align: center;
+    padding: 8px;
+}
 footer{
     color: white;
     font-style: italic;
