--- a/aula14ex/ex017/estilo.css
+++ b/aula14ex/ex017/estilo.css
@@ -10,15 +10,17 @@ body{
 }
 header{
     color: white;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.507);
 }
 section{
     background: white;
     border-radius: 10px;
-    padding: 15px;
+    padding: 30px 15px 15px 15px;
     width: 500px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.164);
 }
 footer{
     color: white;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.507);
     font-style: italic;
 }
