--- a/ex_bolinhas/style.css
+++ b/ex_bolinhas/style.css
@@ -3,6 +3,7 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .controles{
     display: flex;
@@ -11,17 +12,16 @@
     width: 100%;
     background-color: #eee;
     border: 2px solid #000;
-    border-radius: 5px;
 }
 .controle{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
     background-color: #fff;
     border: 2px solid #888;
-    border-radius: 5px;
+    border-radius: 8px;
     padding: 5px;
     margin: 5px;
 }
@@ -38,6 +38,7 @@ input[type='number'], #num_objetos{
     border-radius: 5px;
     margin-bottom: 5px;
     width: 150px;
+    font-size: medium;
 }
 .palco{
     display: flex;
@@ -47,7 +48,6 @@ input[type='number'], #num_objetos{
     min-height: -webkit-fill-avaible;
     background-color: #eee;
     border: 2px solid #000;
-    border-radius: 5px;
     position: absolute;
     overflow: hidden;
 }
