--- a/ex_bolinhas/style.css
+++ b/ex_bolinhas/style.css
@@ -3,51 +3,57 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    color: #e2dada;
 }
 .controles{
     display: flex;
     justify-content: flex-start;
     align-items: stretch;
     width: 100%;
-    background-color: #eee;
-    border: 2px solid #000;
+    background: linear-gradient(90deg, #5d28b9, #5218b6);
+    height: 13vh;
 }
 .controle{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
-    background-color: #fff;
-    border: 2px solid #888;
     border-radius: 8px;
     padding: 5px;
     margin: 5px;
 }
 button{
     cursor: pointer;
-    background-color: #888;
-    color: #fff;
-    padding: 5px;
-    border-radius: 5px;
+    background-color: #e4e1e1;
+    border: 1px solid #e4e1e1;
+    color: #31093bbe;
+    padding: 4px 5px;
+    border-radius: 5px 2px;
+}
+button:hover{
+    background-color: #31093b21;
+    border: 1px solid #e4e1e1;
+    color: #e4e1e1;
+    transition: 0.3s;
 }
 input[type='number'], #num_objetos{
-    border: 1px solid #000;
     padding: 5px;
-    border-radius: 5px;
     margin-bottom: 5px;
+    border-radius: 5px 2px;
     width: 150px;
     font-size: medium;
+    text-indent: 65px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.171);
+    background-color: #31093b56;
 }
 .palco{
     display: flex;
     width: 100%;
     min-height: 87vh;
-    min-height: fill-avaible;
-    min-height: -webkit-fill-avaible;
-    background-color: #eee;
-    border: 2px solid #000;
+    background-color: #08040e;
     position: absolute;
     overflow: hidden;
 }
