--- a/ex_bolinhas/style.css
+++ b/ex_bolinhas/style.css
@@ -53,7 +53,19 @@ input[type='number'], #num_objetos{
     display: flex;
     width: 100%;
     min-height: 87vh;
-    background-color: #08040e;
+    --s: 50px;
+  --c: #08040e;
+  --_s: calc(2*var(--s)) calc(2*var(--s));
+  --_g: 35.36% 35.36% at;
+  --_c: #09021300 66%,#18082565 68% 70%,#00000000 72%;
+  background: 
+    radial-gradient(var(--_g) 100% 25%,var(--_c)) var(--s) var(--s)/var(--_s), 
+    radial-gradient(var(--_g) 0 75%,var(--_c)) var(--s) var(--s)/var(--_s), 
+    radial-gradient(var(--_g) 100% 25%,var(--_c)) 0 0/var(--_s), 
+    radial-gradient(var(--_g) 0 75%,var(--_c)) 0 0/var(--_s), 
+    repeating-conic-gradient(var(--c) 0 25%,#0000 0 50%) 0 0/var(--_s), 
+    radial-gradient(var(--_c)) 0 calc(var(--s)/2)/var(--s) var(--s) var(--c);
+  background-attachment: fixed;
     position: absolute;
     overflow: hidden;
 }
