--- a/ex_bolinhas/style.css
+++ b/ex_bolinhas/style.css
@@ -18,7 +18,7 @@
 .controle{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
     border-radius: 8px;
